# last30days-skill

./: .env.example  .gitignore  ADK_MIGRATION_GUIDE.md  Dockerfile  Makefile  pyproject.toml
app/: __init__.py  agent.py  fast_api_app.py  telemetry.py  tools.py
scripts/: sync.sh
tests/eval/: eval_config.json
tests/eval/evalsets/: basic.evalset.json
tests/integration/: __init__.py  test_agent.py
